# agroservices

./: README.md  pyproject.toml
conda/: environment.yml  meta.yaml
doc/source/: conf.py  index.rst
doc/source/references/: agroservices.ipm.rst  agroservices.phis.rst  index.rst
doc/source/user/: notebooks.rst
src/openalea/agroservices/: __init__.py
