[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "openalea.agroservices"
authors = [
  { name = "Christian Fournier"},
  { name = "Christophe Pradal"},
  { name = "Marc Labadie"},
  { name = "Aurelien Besnier"},
]
description = "AgroService is a Python package that provides access to IPM Web Services (at least) and a framework to easily implement Web Services wrappers. This package is intended to be close to the webservice. Therefore the requests will have the same API that each web service."

license = "GPL-3.0"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.8"
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dynamic = ["readme", "version"]
dependencies = [
  "appdirs",
  "bs4",
  "colorlog",
  "requests",
  "requests_cache",
  "pygments",
  "jsf",
  "pyyaml",
  "six"
]

[project.optional-dependencies]
test = ["pytest"]
doc = [
  "pydata-sphinx-theme",
  "myst-parser",
  "sphinx-favicon",
  "nbsphinx",
  "ipykernel",
]

[project.urls]
Homepage = "https://openalea.readthedocs.io/"
"Bug Tracker" = "https://github.com/openalea/agroservices/issues"
Discussions = "https://github.com/openalea/agroservices/discussions"
Changelog = "https://github.com/openalea/agroservices/releases"

[tool.setuptools.packages.find]
where = ["src"]
include = ["openalea.*"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools_scm]
